
SUBDIRS = tutorials


docdir = $(prefix)/doc

nobase_doc_DATA = overview/datapath.gif \
                  overview/genview.gif \
                  overview/graal.gif \
                  overview/Makefile \
                  overview/na3dp.ps \
                  overview/na3y.ps \
                  overview/nmx2_dp.ps \
                  overview/nmx2_y.ps \
                  overview/overview.blg \
                  overview/overview.tex \
                  overview/overview.pdf \
                  overview/stacs.gif \
                  overview/thesis.bib \
                  overview/tools.fig \
                  \
                  design-flow/beh-spec-alliance.gif \
                  design-flow/beh-spec-asimut.gif \
                  design-flow/beh-spec-fsm.gif \
                  design-flow/beh-spec-mocha.gif \
                  design-flow/beh-spec-rtl.gif \
                  design-flow/beh-spec-split.gif \
                  design-flow/beh-spec-struct.gif \
                  design-flow/beh-spec-syf.gif \
                  design-flow/beh-spec-vasy.gif \
                  design-flow/dreal.gif \
                  design-flow/flow.html \
                  design-flow/future.html \
                  design-flow/graal.gif \
                  design-flow/index.html \
                  design-flow/intro.html \
                  design-flow/logo.gif \
                  design-flow/mips-small.jpg \
                  design-flow/mips.html \
                  design-flow/mips.jpg \
                  design-flow/place-route-ocpr.gif \
                  design-flow/place-route-ring.gif \
                  design-flow/place-route-s2r.gif \
                  design-flow/place-route-valid.gif \
                  design-flow/rtl-synth-dp.gif \
                  design-flow/rtl-synth-fmi.gif \
                  design-flow/rtl-synth-genlib.gif \
                  design-flow/rtl-synth-logic.gif \
                  design-flow/tools.html \
                  design-flow/xfsm.gif \
                  design-flow/xpat.gif \
                  design-flow/xsch.gif \
                  \
                  alliance-run/Makefile \
                  alliance-run/README \
                  alliance-run/amd2901_chip.c \
                  alliance-run/amd2901_chip.rin \
                  alliance-run/amd2901_core.c \
                  alliance-run/amd2901_core.ioc \
                  alliance-run/amd2901_ctl.lax \
                  alliance-run/amd2901_ctl.vbe \
                  alliance-run/amd2901_dpt.c \
                  alliance-run/bench.zsh \
                  alliance-run/pattern.c

examplesdir = $(prefix)/examples

nobase_examples_DATA = alliance-examples/addaccu16/Makefile \
                       alliance-examples/addaccu16/README \
                       alliance-examples/addaccu16/addaccu.ioc \
                       alliance-examples/addaccu16/addaccu.pat \
                       alliance-examples/addaccu16/addaccu.vhdl \
                       alliance-examples/adder4/Makefile \
                       alliance-examples/adder4/README \
                       alliance-examples/adder4/adder4.ioc \
                       alliance-examples/adder4/adder4.pat \
                       alliance-examples/adder4/adder4.vhdl \
                       alliance-examples/amd2901/Makefile \
                       alliance-examples/amd2901/amd2901_chip.c \
                       alliance-examples/amd2901/amd2901_chip.rin \
                       alliance-examples/amd2901/amd2901_core.c \
                       alliance-examples/amd2901/amd2901_core.ioc \
                       alliance-examples/amd2901/amd2901_ctl.lax \
                       alliance-examples/amd2901/amd2901_ctl.vbe \
                       alliance-examples/amd2901/amd2901_dpt.c \
                       alliance-examples/amd2901/amd2901_dpt.vbe \
                       alliance-examples/amd2901/pattern.c \
                       alliance-examples/amd2901/pattern.pat \
                       alliance-examples/amd2901/pattern_core.spi \
                       alliance-examples/amd2901-vasy/Makefile \
                       alliance-examples/amd2901-vasy/amd2901.ioc \
                       alliance-examples/amd2901-vasy/amd2901.pat \
                       alliance-examples/amd2901-vasy/amd2901.vhdl \
                       alliance-examples/digi/Makefile \
                       alliance-examples/digi/digi.fsm \
                       alliance-examples/digi/digi.ioc \
                       alliance-examples/digi/digi.pat \
                       alliance-examples/divcas4/CATAL_ASIMUT_VASY \
                       alliance-examples/divcas4/Makefile \
                       alliance-examples/divcas4/README \
                       alliance-examples/divcas4/cas.lax \
                       alliance-examples/divcas4/cas.vhdl \
                       alliance-examples/divcas4/divcas4.ioc \
                       alliance-examples/divcas4/divcas4.pat \
                       alliance-examples/divcas4/divcas4.vhdl \
                       alliance-examples/divcas4/divcas4_model.lax \
                       alliance-examples/etc/techno-035.rds \
                       alliance-examples/etc/techno-symb.rds \
                       alliance-examples/hadamard/CATAL_ASIMUT_VASY \
                       alliance-examples/hadamard/Makefile \
                       alliance-examples/hadamard/calcul.vhdl \
                       alliance-examples/hadamard/compteur.vhdl \
                       alliance-examples/hadamard/hadamard.ioc \
                       alliance-examples/hadamard/hadamard.vhdl \
                       alliance-examples/hadamard/hadamard_1.pat \
                       alliance-examples/hadamard/hadamard_2.pat \
                       alliance-examples/hadamard/hadamard_3.pat \
                       alliance-examples/hadamard/ram.vhdl \
                       alliance-examples/hadamard/rom.vhdl \
                       alliance-examples/hadamard/sequenceur.vhdl \
                       alliance-examples/mipsR3000/asm/CATAL \
                       alliance-examples/mipsR3000/asm/CATAL_VBE \
                       alliance-examples/mipsR3000/asm/CATAL_VBE_DPT \
                       alliance-examples/mipsR3000/asm/CATAL_VST_FSM \
                       alliance-examples/mipsR3000/asm/CATAL_VST_FSM_STS \
                       alliance-examples/mipsR3000/asm/CATAL_VST_FSM_STS_DPT \
                       alliance-examples/mipsR3000/asm/CATAL_VST_STS \
                       alliance-examples/mipsR3000/asm/Makefile_alu \
                       alliance-examples/mipsR3000/asm/Makefile_bm \
                       alliance-examples/mipsR3000/asm/Makefile_excp \
                       alliance-examples/mipsR3000/asm/Makefile_int \
                       alliance-examples/mipsR3000/asm/Makefile_misc \
                       alliance-examples/mipsR3000/asm/add000.pat \
                       alliance-examples/mipsR3000/asm/add000.u \
                       alliance-examples/mipsR3000/asm/add001.u \
                       alliance-examples/mipsR3000/asm/add002.u \
                       alliance-examples/mipsR3000/asm/add003.u \
                       alliance-examples/mipsR3000/asm/add004.u \
                       alliance-examples/mipsR3000/asm/add005.u \
                       alliance-examples/mipsR3000/asm/addu000.u \
                       alliance-examples/mipsR3000/asm/addu001.u \
                       alliance-examples/mipsR3000/asm/addu002.u \
                       alliance-examples/mipsR3000/asm/addu003.u \
                       alliance-examples/mipsR3000/asm/and000.u \
                       alliance-examples/mipsR3000/asm/and001.u \
                       alliance-examples/mipsR3000/asm/beq000.u \
                       alliance-examples/mipsR3000/asm/beq001.u \
                       alliance-examples/mipsR3000/asm/bgez000.u \
                       alliance-examples/mipsR3000/asm/bgez001.u \
                       alliance-examples/mipsR3000/asm/bgezal000.u \
                       alliance-examples/mipsR3000/asm/bgtz000.u \
                       alliance-examples/mipsR3000/asm/blez000.u \
                       alliance-examples/mipsR3000/asm/bltz000.u \
                       alliance-examples/mipsR3000/asm/bltzal000.u \
                       alliance-examples/mipsR3000/asm/bne000.u \
                       alliance-examples/mipsR3000/asm/bne001.u \
                       alliance-examples/mipsR3000/asm/break_00.e \
                       alliance-examples/mipsR3000/asm/break_00.u \
                       alliance-examples/mipsR3000/asm/exc000.e \
                       alliance-examples/mipsR3000/asm/exc000.u \
                       alliance-examples/mipsR3000/asm/exc001.e \
                       alliance-examples/mipsR3000/asm/exc001.u \
                       alliance-examples/mipsR3000/asm/exc002.e \
                       alliance-examples/mipsR3000/asm/exc002.u \
                       alliance-examples/mipsR3000/asm/exc003.e \
                       alliance-examples/mipsR3000/asm/exc003.u \
                       alliance-examples/mipsR3000/asm/exc004.e \
                       alliance-examples/mipsR3000/asm/exc004.u \
                       alliance-examples/mipsR3000/asm/exc005.e \
                       alliance-examples/mipsR3000/asm/exc005.u \
                       alliance-examples/mipsR3000/asm/exc006.e \
                       alliance-examples/mipsR3000/asm/exc006.u \
                       alliance-examples/mipsR3000/asm/exc007.e \
                       alliance-examples/mipsR3000/asm/exc007.u \
                       alliance-examples/mipsR3000/asm/exc008.e \
                       alliance-examples/mipsR3000/asm/exc008.u \
                       alliance-examples/mipsR3000/asm/exc009.e \
                       alliance-examples/mipsR3000/asm/exc009.u \
                       alliance-examples/mipsR3000/asm/exc010.e \
                       alliance-examples/mipsR3000/asm/exc010.u \
                       alliance-examples/mipsR3000/asm/exc011.e \
                       alliance-examples/mipsR3000/asm/exc011.u \
                       alliance-examples/mipsR3000/asm/exc012.e \
                       alliance-examples/mipsR3000/asm/exc012.u \
                       alliance-examples/mipsR3000/asm/exc013.e \
                       alliance-examples/mipsR3000/asm/exc013.u \
                       alliance-examples/mipsR3000/asm/exc014.e \
                       alliance-examples/mipsR3000/asm/exc014.u \
                       alliance-examples/mipsR3000/asm/exc015.e \
                       alliance-examples/mipsR3000/asm/exc015.u \
                       alliance-examples/mipsR3000/asm/exc016.e \
                       alliance-examples/mipsR3000/asm/exc016.u \
                       alliance-examples/mipsR3000/asm/exc017.e \
                       alliance-examples/mipsR3000/asm/exc017.u \
                       alliance-examples/mipsR3000/asm/exc018.e \
                       alliance-examples/mipsR3000/asm/exc018.u \
                       alliance-examples/mipsR3000/asm/exc019.e \
                       alliance-examples/mipsR3000/asm/exc019.u \
                       alliance-examples/mipsR3000/asm/exc020.e \
                       alliance-examples/mipsR3000/asm/exc020.u \
                       alliance-examples/mipsR3000/asm/exc021.e \
                       alliance-examples/mipsR3000/asm/exc021.u \
                       alliance-examples/mipsR3000/asm/exc022.e \
                       alliance-examples/mipsR3000/asm/exc022.u \
                       alliance-examples/mipsR3000/asm/exc023.e \
                       alliance-examples/mipsR3000/asm/exc023.u \
                       alliance-examples/mipsR3000/asm/exc024.e \
                       alliance-examples/mipsR3000/asm/exc024.u \
                       alliance-examples/mipsR3000/asm/foo.vbe \
                       alliance-examples/mipsR3000/asm/go-all.sh \
                       alliance-examples/mipsR3000/asm/go-bench.sh \
                       alliance-examples/mipsR3000/asm/it000.e \
                       alliance-examples/mipsR3000/asm/it000.u \
                       alliance-examples/mipsR3000/asm/it001.e \
                       alliance-examples/mipsR3000/asm/it001.u \
                       alliance-examples/mipsR3000/asm/it002.e \
                       alliance-examples/mipsR3000/asm/it002.u \
                       alliance-examples/mipsR3000/asm/it003.e \
                       alliance-examples/mipsR3000/asm/it003.u \
                       alliance-examples/mipsR3000/asm/it004.e \
                       alliance-examples/mipsR3000/asm/it004.u \
                       alliance-examples/mipsR3000/asm/it005.e \
                       alliance-examples/mipsR3000/asm/it005.u \
                       alliance-examples/mipsR3000/asm/it006.e \
                       alliance-examples/mipsR3000/asm/it006.u \
                       alliance-examples/mipsR3000/asm/jal000.u \
                       alliance-examples/mipsR3000/asm/jal001.u \
                       alliance-examples/mipsR3000/asm/jalr000.u \
                       alliance-examples/mipsR3000/asm/jalr001.u \
                       alliance-examples/mipsR3000/asm/jr000.u \
                       alliance-examples/mipsR3000/asm/jr001.u \
                       alliance-examples/mipsR3000/asm/lhi000.u \
                       alliance-examples/mipsR3000/asm/lhi001.u \
                       alliance-examples/mipsR3000/asm/lhi2000.u \
                       alliance-examples/mipsR3000/asm/lhi2001.u \
                       alliance-examples/mipsR3000/asm/lsb000.u \
                       alliance-examples/mipsR3000/asm/lsb001.u \
                       alliance-examples/mipsR3000/asm/lsb002.u \
                       alliance-examples/mipsR3000/asm/lsb003.u \
                       alliance-examples/mipsR3000/asm/lsb004.u \
                       alliance-examples/mipsR3000/asm/lsb005.u \
                       alliance-examples/mipsR3000/asm/lsb006.u \
                       alliance-examples/mipsR3000/asm/lsb007.u \
                       alliance-examples/mipsR3000/asm/lsbu000.u \
                       alliance-examples/mipsR3000/asm/lsbu001.u \
                       alliance-examples/mipsR3000/asm/lsbu002.u \
                       alliance-examples/mipsR3000/asm/lsbu003.u \
                       alliance-examples/mipsR3000/asm/lsh000.u \
                       alliance-examples/mipsR3000/asm/lsh001.u \
                       alliance-examples/mipsR3000/asm/lsh002.u \
                       alliance-examples/mipsR3000/asm/lsh003.u \
                       alliance-examples/mipsR3000/asm/lshu000.u \
                       alliance-examples/mipsR3000/asm/lshu001.u \
                       alliance-examples/mipsR3000/asm/lsw000.u \
                       alliance-examples/mipsR3000/asm/lsw001.u \
                       alliance-examples/mipsR3000/asm/mftc0_00.e \
                       alliance-examples/mipsR3000/asm/mftc0_00.u \
                       alliance-examples/mipsR3000/asm/mfthi_00.e \
                       alliance-examples/mipsR3000/asm/mfthi_00.u \
                       alliance-examples/mipsR3000/asm/mftlo_00.e \
                       alliance-examples/mipsR3000/asm/mftlo_00.u \
                       alliance-examples/mipsR3000/asm/mips_defs.h \
                       alliance-examples/mipsR3000/asm/nor000.u \
                       alliance-examples/mipsR3000/asm/or000.u \
                       alliance-examples/mipsR3000/asm/or001.u \
                       alliance-examples/mipsR3000/asm/or002.u \
                       alliance-examples/mipsR3000/asm/reg000.u \
                       alliance-examples/mipsR3000/asm/res_test \
                       alliance-examples/mipsR3000/asm/rome.u \
                       alliance-examples/mipsR3000/asm/rome.vbe \
                       alliance-examples/mipsR3000/asm/romr.e \
                       alliance-examples/mipsR3000/asm/roms.vbe.orig \
                       alliance-examples/mipsR3000/asm/romu.vbe \
                       alliance-examples/mipsR3000/asm/sle000.u \
                       alliance-examples/mipsR3000/asm/sle001.u \
                       alliance-examples/mipsR3000/asm/sle002.u \
                       alliance-examples/mipsR3000/asm/sle003.u \
                       alliance-examples/mipsR3000/asm/sle004.u \
                       alliance-examples/mipsR3000/asm/sle005.u \
                       alliance-examples/mipsR3000/asm/sle006.u \
                       alliance-examples/mipsR3000/asm/sle007.u \
                       alliance-examples/mipsR3000/asm/sll000.u \
                       alliance-examples/mipsR3000/asm/sll001.u \
                       alliance-examples/mipsR3000/asm/sltiu000.u \
                       alliance-examples/mipsR3000/asm/sltiu001.u \
                       alliance-examples/mipsR3000/asm/sltiu002.u \
                       alliance-examples/mipsR3000/asm/sltiu003.u \
                       alliance-examples/mipsR3000/asm/sltiu004.u \
                       alliance-examples/mipsR3000/asm/sltu000.u \
                       alliance-examples/mipsR3000/asm/sltu001.u \
                       alliance-examples/mipsR3000/asm/sltu002.u \
                       alliance-examples/mipsR3000/asm/sltu003.u \
                       alliance-examples/mipsR3000/asm/sltu004.u \
                       alliance-examples/mipsR3000/asm/sra000.u \
                       alliance-examples/mipsR3000/asm/sra001.u \
                       alliance-examples/mipsR3000/asm/srl000.u \
                       alliance-examples/mipsR3000/asm/srl001.u \
                       alliance-examples/mipsR3000/asm/sub000.u \
                       alliance-examples/mipsR3000/asm/sub001.u \
                       alliance-examples/mipsR3000/asm/syscall_00.e \
                       alliance-examples/mipsR3000/asm/syscall_00.u \
                       alliance-examples/mipsR3000/asm/xor000.u \
                       alliance-examples/mipsR3000/asm/xor001.u \
                       alliance-examples/mipsR3000/asm/xor002.u \
                       alliance-examples/mipsR3000/sce/CATAL_CTL \
                       alliance-examples/mipsR3000/sce/CATAL_VBE \
                       alliance-examples/mipsR3000/sce/CATAL_VST \
                       alliance-examples/mipsR3000/sce/Makefile \
                       alliance-examples/mipsR3000/sce/local-cmos-035.rds \
                       alliance-examples/mipsR3000/sce/local-cmos.graal \
                       alliance-examples/mipsR3000/sce/local-cmos.rds \
                       alliance-examples/mipsR3000/sce/mips_chip.rin \
                       alliance-examples/mipsR3000/sce/mips_chip.vst \
                       alliance-examples/mipsR3000/sce/mips_core.c \
                       alliance-examples/mipsR3000/sce/mips_core.ioc \
                       alliance-examples/mipsR3000/sce/mips_core.vst \
                       alliance-examples/mipsR3000/sce/mips_cpu-orig.pat \
                       alliance-examples/mipsR3000/sce/mips_cpu.pat \
                       alliance-examples/mipsR3000/sce/mips_cpu.vst \
                       alliance-examples/mipsR3000/sce/mips_ctl.lax \
                       alliance-examples/mipsR3000/sce/mips_ctl.path \
                       alliance-examples/mipsR3000/sce/mips_ctl.scapin \
                       alliance-examples/mipsR3000/sce/mips_ctl_nt.vst \
                       alliance-examples/mipsR3000/sce/mips_dec.vbe \
                       alliance-examples/mipsR3000/sce/mips_dpt.c \
                       alliance-examples/mipsR3000/sce/mips_dpt.vbe \
                       alliance-examples/mipsR3000/sce/mips_scan.c \
                       alliance-examples/mipsR3000/sce/mips_scan.pat \
                       alliance-examples/mipsR3000/sce/mips_seq.fsm \
                       alliance-examples/mipsR3000/sce/mips_sts.vbe \
                       alliance-examples/mipsR3000/sce/res_vst.pat \
                       alliance-examples/mipsR3000/sce/rome.vbe \
                       alliance-examples/mipsR3000/sce/romr.vbe \
                       alliance-examples/mipsR3000/sce/roms.vbe \
                       alliance-examples/mipsR3000/sce/romu.vbe \
                       alliance-examples/mipsR3000/sce/sr64_1a.vbe \
                       alliance-examples/mipsR3000/sce/sr64_32a.vst \
                       alliance-examples/mipsR3000/sce/sr64_8a.vst \
                       alliance-examples/mipsR3000/sce/timer.vbe \
                       alliance-examples/multi16b-reg/Makefile \
                       alliance-examples/multi16b-reg/multi16.ioc \
                       alliance-examples/multi16b-reg/multi16.lax \
                       alliance-examples/multi16b-reg/multi16.pat \
                       alliance-examples/multi16b-reg/multi16.vhdl \
                       alliance-examples/multi4b/Makefile \
                       alliance-examples/multi4b/README \
                       alliance-examples/multi4b/multi4.ioc \
                       alliance-examples/multi4b/multi4.pat \
                       alliance-examples/multi4b/multi4.vhdl \
                       alliance-examples/multi8/CATAL_ASIMUT_VASY \
                       alliance-examples/multi8/Makefile \
                       alliance-examples/multi8/README \
                       alliance-examples/multi8/addaccu.vhdl \
                       alliance-examples/multi8/controller.vhdl \
                       alliance-examples/multi8/multi8.ioc \
                       alliance-examples/multi8/multi8.pat \
                       alliance-examples/multi8/multi8.vhdl \
                       alliance-examples/multi8/sra.vhdl \
                       alliance-examples/multi8/srb.vhdl \
                       alliance-examples/multi8b/Makefile \
                       alliance-examples/multi8b/README \
                       alliance-examples/multi8b/multi8.ioc \
                       alliance-examples/multi8b/multi8.lax \
                       alliance-examples/multi8b/multi8.pat \
                       alliance-examples/multi8b/multi8.vhdl \
                       alliance-examples/pgcd/CATAL_ASIMUT_VASY \
                       alliance-examples/pgcd/Makefile \
                       alliance-examples/pgcd/README \
                       alliance-examples/pgcd/calcul.vhdl \
                       alliance-examples/pgcd/pgcd.ioc \
                       alliance-examples/pgcd/pgcd.pat \
                       alliance-examples/pgcd/pgcd.vhdl \
                       alliance-examples/pgcd/sequenceur.vhdl \
                       alliance-examples/sqrt32/CATAL_ASIMUT_VASY \
                       alliance-examples/sqrt32/Makefile \
                       alliance-examples/sqrt32/README \
                       alliance-examples/sqrt32/s0.vhdl \
                       alliance-examples/sqrt32/s0b.vhdl \
                       alliance-examples/sqrt32/s1.vhdl \
                       alliance-examples/sqrt32/s1b.vhdl \
                       alliance-examples/sqrt32/sb.vhdl \
                       alliance-examples/sqrt32/sm.vhdl \
                       alliance-examples/sqrt32/sn.vhdl \
                       alliance-examples/sqrt32/sqrt32.ioc \
                       alliance-examples/sqrt32/sqrt32.pat \
                       alliance-examples/sqrt32/sqrt32.vhdl \
                       alliance-examples/sqrt8/CATAL_ASIMUT_VASY \
                       alliance-examples/sqrt8/Makefile \
                       alliance-examples/sqrt8/README \
                       alliance-examples/sqrt8/sm.vhdl \
                       alliance-examples/sqrt8/sqrt8.ioc \
                       alliance-examples/sqrt8/sqrt8.pat \
                       alliance-examples/sqrt8/sqrt8.vhdl \
                       alliance-examples/tuner/README \
                       alliance-examples/tuner/build_tuner \
                       alliance-examples/tuner/circuit.c \
                       alliance-examples/tuner/core.c \
                       alliance-examples/tuner/fake05.dreal \
                       alliance-examples/tuner/fake05.rds \
                       alliance-examples/tuner/padreal.cif \
                       alliance-examples/tuner/padreal.gds \
                       alliance-examples/tuner/tuner-fr.pdf \
                       alliance-examples/tuner/tuner.ioc \
                       alliance-examples/tuner/tuner.rin \
                       alliance-examples/tuner/tuner.vbe \
                       alliance-examples/tuner/tuner_io.c 

EXTRA_DIST = $(nobase_doc_DATA) $(nobase_examples_DATA)

overview/overview.pdf: $(srcdir)/overview/overview.tex
	cd $(srcdir)/overview; make overview.pdf

tutorials/start/start.pdf: $(srcdir)/tutorials/start/start.tex
	cd $(srcdir)/tutorials/start; make start.pdf
