man_MANS  = addablhexpr.3            getablexprlength.3       mapablexpr.3 \
addablqexpr.3            getablexprmax.3          mapabloperexpr.3 \
createablatom.3          getablexprmin.3          polarablexpr.3 \
createablbinexpr.3       getablexprnum.3          polardupablexpr.3 \
createablnotexpr.3       getablexprnumatom.3      simpablexpr.3 \
createabloper.3          getablexprnumbinoper.3   simpdupablexpr.3 \
createablunaryexpr.3     getablexprnumocc.3       substablexpr.3 \
createablxorbinexpr.3    getablexprsupport.3      substdupablexpr.3 \
delablexpr.3             isablbinaryoper.3        unflatablexpr.3 \
delablexprnum.3          isablequalexpr.3         vhdlablname.3 \
devablxorexpr.3          isablnameinexpr.3        vhdlablvector.3 \
devdupablxorexpr.3       isabloperinexpr.3        viewablexpr.3 \
dupablexpr.3             isablsimilarexpr.3       viewablexprfile.3 \
flatablexpr.3            isablunaryoper.3         viewablexprstr.3 \
freeablexpr.3            mapablanyexpr.3 \
getablexprdepth.3        mapableveryexpr.3

EXTRA_DIST = $(man_MANS)
