man_MANS  = addbddassoc.3 \
addbddcircuitabl.3 \
addbddcircuitin.3 \
addbddcircuitout.3 \
addbddnode.3 \
addbddnodeassoc.3 \
addbddnodelist.3 \
addbddvar.3 \
addbddvarafter.3 \
addbddvarbefore.3 \
addbddvarfirst.3 \
addbddvarlast.3 \
applybddnode.3 \
applybddnodeite.3 \
applybddnodelist.3 \
applybddnodenot.3 \
applybddnodeterm.3 \
clearbddsystemref.3 \
clearbddsystemrefext.3 \
clearbddsystemrefint.3 \
cofactorbddnode.3 \
composebddnode.3 \
convertbddcircuitabl.3 \
convertbddcircuitsumabl.3 \
convertbddindexabl.3 \
convertbddmuxabl.3 \
convertbddnodeabl.3 \
convertbddnodesumabl.3 \
createbddcircuit.3 \
createbddsystem.3 \
decbddrefext.3 \
decbddrefint.3 \
delbddassoc.3 \
delbddcircuitout.3 \
delbddnode.3 \
delbddnodeassoc.3 \
delbddnodelist.3 \
destroybddassoc.3 \
destroybddcircuit.3 \
destroybddsystem.3 \
existbddnodeassocoff.3 \
existbddnodeassocon.3 \
garbagebddsystem.3 \
getbddnodenum.3 \
getbddnodesize.3 \
getbddnodesupport.3 \
getbddvarbyindex.3 \
getbddvarindex.3 \
getbddvarnode.3 \
getbddvarnodebyindex.3 \
implybddnode.3 \
incbddrefext.3 \
incbddrefint.3 \
intersectbddnode.3 \
isbddvarinsupport.3 \
markbddnode.3 \
relprodbddnodeassoc.3 \
reorderbddsystemdynamic.3 \
reorderbddsystemsimple.3 \
reorderbddsystemtop.3 \
reorderbddsystemwindow.3 \
resetbddcircuit.3 \
resetbddsystem.3 \
restrictbddnode.3 \
satisfybddnode.3 \
searchbddcircuitin.3 \
searchbddcircuitout.3 \
setbddrefext.3 \
simpbddnodedcoff.3 \
simpbddnodedcon.3 \
substbddnodeassoc.3 \
swapbddvar.3 \
testbddcircuit.3 \
unmarkbddnode.3 \
unsetbddrefext.3 \
viewbddcircuit.3 \
viewbddnode.3 \
viewbddsystem.3 \
viewbddsysteminfo.3
EXTRA_DIST = $(man_MANS)
