man_MANS  = \
beh.3		beh_addbiabl.3	beh_delbereg.3	beh_frebemsg.3	beh_rmvbeaux.3 \
beh_addbeaux.3	beh_addbinod.3	beh_delberin.3	beh_frebeout.3	beh_rmvbebus.3 \
beh_addbebus.3	beh_debug.3	beh_delbiabl.3	beh_frebepor.3	beh_rmvbebux.3 \
beh_addbebux.3	beh_delbeaux.3	beh_delbinod.3	beh_frebereg.3	beh_rmvbefig.3 \
beh_addbefig.3	beh_delbebus.3	beh_depend.3	beh_freberin.3	beh_rmvbegen.3 \
beh_addbegen.3	beh_delbebux.3	beh_error.3	beh_frebiabl.3	beh_rmvbemsg.3 \
beh_addbemsg.3	beh_delbefig.3	beh_frebeaux.3	beh_frebinod.3	beh_rmvbeout.3 \
beh_addbeout.3	beh_delbegen.3	beh_frebebus.3	beh_getgenva.3	beh_rmvbepor.3 \
beh_addbepor.3	beh_delbemsg.3	beh_frebebux.3	beh_makbdd.3	beh_rmvbereg.3 \
beh_addbereg.3	beh_delbeout.3	beh_frebefig.3	beh_makgex.3	beh_rmvberin.3 \
beh_addberin.3	beh_delbepor.3	beh_frebegen.3	beh_message.3

EXTRA_DIST= $(man_MANS)
