## Process this file with automake to produce Makefile.in

AM_CFLAGS =  -I$(top_srcdir)/abe/src \
-I$(top_srcdir)/abl/src \
-I$(top_srcdir)/abv/src \
-I$(top_srcdir)/bdd/src \
-I$(top_srcdir)/aut/src \
-I$(top_srcdir)/mbk/src \
@ALLIANCE_CFLAGS@

bin_PROGRAMS = boog

boog_LDADD = @ALLIANCE_LIBS@ \
-L$(top_builddir)/abv/src \
-L$(top_builddir)/abe/src \
-L$(top_builddir)/abt/src \
-L$(top_builddir)/mbk/src \
-L$(top_builddir)/mbkvti/src \
-L$(top_builddir)/mbkal/src \
-L$(top_builddir)/mbkspice/src \
-L$(top_builddir)/mbkhilo/src \
-L$(top_builddir)/mbkedif/src \
-L$(top_builddir)/mbkvhdlg/src \
-L$(top_builddir)/mbkvrlog/src \
-L$(top_builddir)/mbk/src \
-L$(top_builddir)/mbk/src \
-L$(top_builddir)/bdd/src \
-L$(top_builddir)/abl/src \
-L$(top_builddir)/aut/src \
-L$(top_builddir)/mbk/src \
          -lAbv -lAbe -lAbt -lMlu -lMcl -lMal -lMsl -lMhl -lMel -lMvg -lMgl -lRcn -lMlo -lBdd -lAbl -lAut -lMut
	   
boog_SOURCES = \
bog_lax_param.c            bog_map_adapt.h            bog_normalize_simplify.h \
bog_lax_param.h            bog_map_befig.c            bog_signal_adapt.c \
bog_lib_cell.c             bog_map_befig.h            bog_signal_adapt.h \
bog_lib_cell.h             bog_map_delay.c            bog_signal_delay.c \
bog_lib_complete.c         bog_map_delay.h            bog_signal_delay.h \
bog_lib_complete.h         bog_map_pattern.c          bog_signal_nameindex.c \
bog_lib_format.c           bog_map_pattern.h          bog_signal_nameindex.h \
bog_lib_format.h           bog_map_prepare.c          bog_signal_utils.c \
bog_lib_matching.c         bog_map_prepare.h          bog_signal_utils.h \
bog_lib_matching.h         bog_normalize_ARITY.c      bog_unflatten_abl.c \
bog_lib_negativ.c          bog_normalize_ARITY.h      bog_unflatten_abl.h \
bog_lib_negativ.h          bog_normalize_DAG.c        bog_unflatten_area.c \
bog_lib_permute.c          bog_normalize_DAG.h        bog_unflatten_area.h \
bog_lib_permute.h          bog_normalize_DC.c         bog_unflatten_befig.c \
bog_lib_reader.c           bog_normalize_DC.h         bog_unflatten_befig.h \
bog_lib_reader.h           bog_normalize_message.c    bog_unflatten_delay.c \
bog_lib_specifications.c   bog_normalize_message.h    bog_unflatten_delay.h \
bog_lib_specifications.h   bog_normalize_nameindex.c  bog_unflatten_oper.c \
bog_lib_utils.c            bog_normalize_nameindex.h  bog_unflatten_oper.h \
bog_lib_utils.h            bog_normalize_power.c      bog_unflatten_utils.c \
bog_main.c                 bog_normalize_power.h      bog_unflatten_utils.h \
bog_map_abl.c              bog_normalize_register.c   bog_xsch_driver.c \
bog_map_abl.h              bog_normalize_register.h   bog_xsch_driver.h \
bog_map_adapt.c            bog_normalize_simplify.c

